--- a/InstanceLocator.Tests/InstanceLocator.Tests.csproj
+++ b/InstanceLocator.Tests/InstanceLocator.Tests.csproj
@@ -53,7 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="InstanceTests.cs" />
+    <Compile Include="DependencyResolverTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
