--- a/InstanceLocator.EntryPoint/InstanceLocator.EntryPoint.csproj
+++ b/InstanceLocator.EntryPoint/InstanceLocator.EntryPoint.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{82C79F14-F3C4-4D69-8EC2-3E4BCA78E1DA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{C11821E4-1673-4081-AA39-A8B45289FF69}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InstanceLocator.Harness</RootNamespace>
-    <AssemblyName>InstanceLocator.Harness</AssemblyName>
+    <RootNamespace>InstanceLocator.EntryPoint</RootNamespace>
+    <AssemblyName>InstanceLocator.EntryPoint</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,25 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="XmlDataReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\InstanceLocator.EntryPoint\InstanceLocator.EntryPoint.csproj">
-      <Project>{c11821e4-1673-4081-aa39-a8b45289ff69}</Project>
-      <Name>InstanceLocator.EntryPoint</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\InstanceLocator\InstanceLocator.FakesResolver.csproj">
-      <Project>{09cc3297-2661-4ada-aeaa-d19f87fc5f29}</Project>
-      <Name>InstanceLocator.FakesResolver</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SampleData\InstanceLocator.SampleData.csproj">
       <Project>{32aa80ef-f39e-4520-9aaa-7675184fbb5d}</Project>
       <Name>InstanceLocator.SampleData</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
