--- a/InstanceLocator/InstanceLocator.FakesResolver.csproj
+++ b/InstanceLocator/InstanceLocator.FakesResolver.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32AA80EF-F39E-4520-9AAA-7675184FBB5D}</ProjectGuid>
+    <ProjectGuid>{09CC3297-2661-4ADA-AEAA-D19F87FC5F29}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SampleData</RootNamespace>
-    <AssemblyName>SampleData</AssemblyName>
+    <RootNamespace>InstanceLocator.FakesResolver</RootNamespace>
+    <AssemblyName>InstanceLocator.FakesResolver</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\InstanceLocator.FakesResolver.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,8 +29,13 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\InstanceLocator.FakesResolver.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,12 +45,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address.cs" />
-    <Compile Include="AddressType.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="CustomerCategory.cs" />
-    <Compile Include="Product.cs" />
+    <Compile Include="Abstract\IDependencyResolver.cs" />
+    <Compile Include="ActivationStrategies\RenewBindingStrategy.cs" />
+    <Compile Include="Extensions\TypeExtensions.cs" />
+    <Compile Include="Helpers\RandomNumberHelper.cs" />
+    <Compile Include="Heuristics\ConstructorScoring.cs" />
+    <Compile Include="Heuristics\PropertyInjector.cs" />
+    <Compile Include="FakeInstanceResolver.cs" />
+    <Compile Include="NinjectModules\DefaultConstantsModule.cs" />
+    <Compile Include="NinjectModules\InfraConstantsModule.cs" />
+    <Compile Include="NinjectModules\OverridenConstantsModule.cs" />
+    <Compile Include="NinjectProviders\ArrayProvider.cs" />
+    <Compile Include="NinjectProviders\BoolProvider.cs" />
+    <Compile Include="NinjectProviders\DateTimeProvider.cs" />
+    <Compile Include="NinjectProviders\EnumProvider.cs" />
+    <Compile Include="NinjectProviders\NumericalsProvider.cs" />
+    <Compile Include="NinjectProviders\StringProvider.cs" />
+    <Compile Include="NinjectResolvers\CustomSelfBindingResolver.cs" />
+    <Compile Include="NinjectResolvers\FallbackResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Extensions\NinjectBindingExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
