--- a/SampleData/InstanceLocator.SampleData.csproj
+++ b/SampleData/InstanceLocator.SampleData.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{09CC3297-2661-4ADA-AEAA-D19F87FC5F29}</ProjectGuid>
+    <ProjectGuid>{32AA80EF-F39E-4520-9AAA-7675184FBB5D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InstanceLocator</RootNamespace>
-    <AssemblyName>InstanceLocator</AssemblyName>
+    <RootNamespace>InstanceLocator.SampleData</RootNamespace>
+    <AssemblyName>InstanceLocator.SampleData</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\InstanceLocator.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,15 +28,14 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\InstanceLocator.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Ninject.3.2.2.0\lib\net40\Ninject.dll</HintPath>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,26 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Abstract\IDependencyResolver.cs" />
-    <Compile Include="ActivationStrategies\RenewBindingStrategy.cs" />
-    <Compile Include="Extensions\TypeExtensions.cs" />
-    <Compile Include="Helpers\RandomNumberHelper.cs" />
-    <Compile Include="Heuristics\ConstructorScoring.cs" />
-    <Compile Include="Heuristics\PropertyInjector.cs" />
-    <Compile Include="FakeInstanceResolver.cs" />
-    <Compile Include="NinjectModules\DefaultConstantsModule.cs" />
-    <Compile Include="NinjectModules\InfraConstantsModule.cs" />
-    <Compile Include="NinjectModules\OverridenConstantsModule.cs" />
-    <Compile Include="NinjectProviders\ArrayProvider.cs" />
-    <Compile Include="NinjectProviders\BoolProvider.cs" />
-    <Compile Include="NinjectProviders\DateTimeProvider.cs" />
-    <Compile Include="NinjectProviders\EnumProvider.cs" />
-    <Compile Include="NinjectProviders\NumericalsProvider.cs" />
-    <Compile Include="NinjectProviders\StringProvider.cs" />
-    <Compile Include="NinjectResolvers\CustomSelfBindingResolver.cs" />
-    <Compile Include="NinjectResolvers\FallbackResolver.cs" />
+    <Compile Include="Address.cs" />
+    <Compile Include="AddressType.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="CustomerCategory.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Extensions\NinjectBindingExtensions.cs" />
+    <Compile Include="SerializerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
