--- a/InstanceLocator.EntryPoint/InstanceLocator.EntryPoint.csproj
+++ b/InstanceLocator.EntryPoint/InstanceLocator.EntryPoint.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SampleData\InstanceLocator.SampleData.csproj">
+    <ProjectReference Include="..\InstanceLocator.SampleData\InstanceLocator.SampleData.csproj">
       <Project>{32aa80ef-f39e-4520-9aaa-7675184fbb5d}</Project>
       <Name>InstanceLocator.SampleData</Name>
     </ProjectReference>
