--- a/InstanceLocator.SampleData/InstanceLocator.SampleData.csproj
+++ b/InstanceLocator.SampleData/InstanceLocator.SampleData.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>\\vdi01t8ahsc109\share_khan\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
