--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\InstanceLocator.EntryPoint\packages.config" />
+  <repository path="..\InstanceLocator.FakesResolver\packages.config" />
   <repository path="..\InstanceLocator.SampleData\packages.config" />
 </repositories>
